Revamp portfolio structure and content
Updated the portfolio layout and content for better presentation.

--- a/index.html
+++ b/index.html
@@ -2,44 +2,54 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Vaibhav M | Portfolio</title>
+<title>Vaibhav M</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<div class="container">
+<div class="bg"></div>
 
-<header class="glass">
+<header class="hero glass">
 <h1>Vaibhav M</h1>
-<p>MCA Student | Full Stack Developer | ML Enthusiast</p>
+<p>Full Stack Developer • ML Enthusiast • MCA Student</p>
 <a href="resume.pdf" class="btn">Download Resume</a>
 </header>
 
 <section class="glass">
-<h2>About</h2>
-<p>MCA student skilled in full stack development and machine learning with strong problem solving ability.</p>
+<h2>About Me</h2>
+<p>MCA student with strong skills in full stack development and machine learning. Passionate about building AI-driven real world applications.</p>
 </section>
 
 <section class="glass">
 <h2>Skills</h2>
-<ul>
-<li>Python, Java, C++</li>
-<li>React, Node, Flask, MongoDB</li>
-<li>NumPy, Pandas, OpenCV, PyTorch</li>
-</ul>
+<div class="skills">
+<span>Python</span>
+<span>Java</span>
+<span>React</span>
+<span>Node</span>
+<span>Flask</span>
+<span>MongoDB</span>
+<span>OpenCV</span>
+<span>PyTorch</span>
+</div>
 </section>
 
 <section class="glass">
 <h2>Projects</h2>
+<div class="grid">
 <div class="card">Anonymous Complaint Monitor</div>
 <div class="card">Library Management System</div>
 <div class="card">EV Charging System</div>
 <div class="card">AI Resume Builder</div>
+</div>
 </section>
 
 <section class="glass">
 <h2>Internships</h2>
-<p>Let’s Pro | Thoughtstream Innovations</p>
+<div class="timeline">
+<div>Let’s Pro</div>
+<div>Thoughtstream Innovations</div>
+</div>
 </section>
 
 <footer class="glass">
@@ -47,8 +57,5 @@
 <p>📍 Mysuru, India</p>
 </footer>
 
-</div>
-
-<script src="script.js"></script>
 </body>
 </html>
